gateway/databases/demo-postgres-gateway/pg-bouncer/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-db-standard
  labels:
    dbaas.infrasnow.com/routes-allowed: "true"
