gateway/databases/demo-postgres-gateway/pg-bouncer/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: postgres-std-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
    - name: postgres
      port: 5432
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              dbaas.infrasnow.com/routes-allowed: "true"

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: postgres-backend-traffic
  namespace: default
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: postgres-std-gateway
  timeout:
    tcp:
      connectTimeout: "10s"
  connection:
    bufferLimit: 32768
